# arca

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  PLAN.md  README.md  REQUIREMENTS.md  build.ps1  player-architecture-options.md
core/: CMakeLists.txt
core/include/arca/: arca.h  arca_engine.h  arca_library.h  arca_render.h
core/src/engine/: engine.cpp  engine_internal.h  render_d3d11.cpp
core/src/media/: media_tools.cpp  media_tools.h
core/src/util/: json_writer.h
docs/architecture/: core-abi.md
docs/macos/: bringup.md  day0-equivalent.md
docs/reference/: fluss-s1-map.md
docs/verification/: day0.md  smoke-checklist.md
shells/macos/ArcaMac/: Package.swift
shells/macos/ArcaMac/Sources/ArcaMac/App/: ArcaMacApp.swift
shells/macos/ArcaMac/Sources/ArcaMac/Models/: AppSection.swift  MediaModels.swift  ShellViewModel.swift
shells/macos/ArcaMac/Sources/ArcaMac/Services/: ArcaCoreClient.swift  NativeArcaCoreClient.swift  StubArcaCoreClient.swift
shells/macos/ArcaMac/Sources/ArcaMac/Views/: BrowseView.swift  ContentView.swift  LibraryView.swift  PlayerPlaceholderView.swift  QueueView.swift  SearchView.swift  SettingsView.swift  SidebarView.swift
shells/macos/ArcaMac/Sources/CArcaCore/: module.modulemap
shells/macos/ArcaMac/Sources/CArcaCore/include/: CArcaCore.h
shells/windows/Arca/: App.xaml  App.xaml.cs  Arca.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
shells/windows/Arca/Interop/: LibraryStore.cs  NativeMethods.cs  PlayerEngine.cs
tools/db-seed/: CMakeLists.txt  main.cpp
tools/hdr-verify/: CMakeLists.txt  main.cpp
tools/lib-verify/: CMakeLists.txt  main.cpp
tools/media-verify/: CMakeLists.txt  main.cpp
